--- a/home/dotfiles/hypr/hyprland.conf
+++ b/home/dotfiles/hypr/hyprland.conf
@@ -3,7 +3,7 @@
 ################
 
 monitor= eDP-1,2560x1440,auto,1.6
-monitor= HDMI-A-1,preferred,auto,1.6, mirror, eDP-1
+monitor= eDP-2,preferred,auto,1.6, mirror, eDP-1
 
 
 ###################
