--- a/home/dotfiles/hypr/hyprland.conf
+++ b/home/dotfiles/hypr/hyprland.conf
@@ -3,7 +3,7 @@
 ################
 
 #monitor= eDP-1,2560x1440,auto,1.6
-monitor= HDMI-A-1,preferred,auto,1.6, mirror, eDP-1
+monitor= HDMI-A-1,preferred,auto,1.6
 
 
 ###################
@@ -41,7 +41,7 @@ xwayland {
 
 general { 
     gaps_in = 0
-    gaps_out = 0
+    gaps_out = 10
     border_size = 0
     # col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
     # col.inactive_border = rgba(595959aa)
