--- a/home/dotfiles/hypr/hyprland.conf
+++ b/home/dotfiles/hypr/hyprland.conf
@@ -2,9 +2,8 @@
 ### MONITORS ###
 ################
 
-#monitor= eDP-1,2560x1440,auto,1.6
-monitor= HDMI-A-1,preferred,auto,1.6
-
+monitor= eDP-1, disable
+monitor= HDMI-A-1,3840x2160@60,0x0, 1.6
 
 ###################
 ### MY PROGRAMS ###
@@ -27,8 +26,8 @@ exec-once = lxqt-policykit-agent
 ### ENVIRONMENT VARIABLES ###
 #############################
 
-env = XCURSOR_SIZE,32
-env = HYPRCURSOR_SIZE,32
+env = XCURSOR_SIZE,64
+env = HYPRCURSOR_SIZE,64
 env = GDK_SCALE,2
 
 xwayland {
@@ -41,7 +40,7 @@ xwayland {
 
 general { 
     gaps_in = 0
-    gaps_out = 10
+    gaps_out = 0
     border_size = 0
     # col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
     # col.inactive_border = rgba(595959aa)
