--- a/home/dotfiles/hypr/hyprpaper.conf
+++ b/home/dotfiles/hypr/hyprpaper.conf
@@ -1,2 +1,2 @@
-  preload = /home/dream/Downloads/city.jpg
-  wallpaper = , /home/dream/Downloads/city.jpg
+  preload = /home/dream/Downloads/eva01.jpg
+  wallpaper = HDMI-A-1,/home/dream/Downloads/eva01.jpg
