--- a/home/dotfiles/hypr/hyprland.conf
+++ b/home/dotfiles/hypr/hyprland.conf
@@ -116,17 +116,17 @@ device {
 ### KEYBINDINGS ###
 ####################
 
-$mainMod = Alt
+$mainMod = SUPER
 
-bind = $mainMod, P, exec, $terminal
-bind = $mainMod, backspace, killactive,
+bind = Alt, P, exec, $terminal
+bind = Alt, backspace, killactive,
 bind = SUPER, M, exit,
-bind = $mainMod, L, exec, $fileManager
+bind = Alt, L, exec, $fileManager
 bind = $mainMod, V, togglefloating,
 bind = SUPER, R, exec, $menu
 #bind = $mainMod, P, pseudo,
 bind = $mainMod, J, togglesplit,
-bind = $mainMod, O, exec, firefox
+bind = Alt, O, exec, flatpak run io.github.zen_browser.zen 
 
 
 bind = $mainMod, left, movefocus, l
