--- a/home/dotfiles/hypr/hyprland.conf
+++ b/home/dotfiles/hypr/hyprland.conf
@@ -126,7 +126,7 @@ bind = $mainMod, V, togglefloating,
 bind = SUPER, R, exec, $menu
 #bind = $mainMod, P, pseudo,
 bind = $mainMod, J, togglesplit,
-bind = Alt, O, exec, firefox 
+bind = Alt, O, exec, brave 
 
 
 bind = $mainMod, left, movefocus, l
