last backup before returing to arch

--- a/home/dotfiles/hypr/hyprland.conf
+++ b/home/dotfiles/hypr/hyprland.conf
@@ -2,8 +2,9 @@
 ### MONITORS ###
 ################
 
-monitor= eDP-1, disable
-monitor= HDMI-A-1,3840x2160@60,0x0, 1.6
+#monitor = eDP-1, disable
+monitor = eDP-1, 2560x1440, 0x0, 1.6
+#monitor = HDMI-A-1, 3840x2160@60, 0x0, 1.6
 
 ###################
 ### MY PROGRAMS ###
@@ -126,7 +127,7 @@ bind = $mainMod, V, togglefloating,
 bind = SUPER, R, exec, $menu
 #bind = $mainMod, P, pseudo,
 bind = $mainMod, J, togglesplit,
-bind = Alt, O, exec, brave 
+bind = Alt, O, exec, firefox 
 
 
 bind = $mainMod, left, movefocus, l
