--- a/home/dotfiles/hypr/hyprpaper.conf
+++ b/home/dotfiles/hypr/hyprpaper.conf
@@ -1,2 +1,3 @@
-  preload = /home/dream/Downloads/eva.png
-  wallpaper = HDMI-A-1,/home/dream/Downloads/eva.png
+  preload = /home/dream/Downloads/wallpapers/howl.jpg
+  wallpaper = e-DP,/home/dream/Downloads/wallpapers/howl.jpg
+  wallpaper = HDMI-A-1,/home/dream/Downloads/wallpapers/howl.jpg
