--- a/home/dotfiles/kitty/current-theme.conf
+++ b/home/dotfiles/kitty/current-theme.conf
@@ -1,32 +1,95 @@
-# BlackMetal by metalelf0, https://github.com/metalelf0
-# This schemes are available as open source under the terms of the [MIT License](https://opensource.org/licenses/MIT).
+# vim:ft=kitty
 
-selection_foreground #000000
-selection_background #ffffff
+## name: Atelier Cave Dark
+## author: Bram de Haan (https://github.com/atelierbram)
+## license: MIT
+## upstream: https://github.com/atelierbram/AtelierSchemes-kitty/blob/main/themes/atelier-cave-dark.conf
+## blurb: A violet-ish palette; not for the claustrophobic.
 
-foreground #ffffff
-background #000000
 
-color0   #000000
-color1   #5f8787
-color2   #dd9999
-color3   #a06666
-color4   #888888
-color5   #999999
-color6   #aaaaaa
-color7   #c1c1c1
-color8   #333333
-color9   #5f8787
-color10  #dd9999
-color11  #a06666
-color12  #888888
-color13  #999999
-color14  #aaaaaa
-color15  #c1c1c1
+#: The basic colors
 
-active_tab_foreground #ffffff
-active_tab_background #000000
-inactive_tab_foreground #666666
-inactive_tab_background #000000
+foreground #8b8792
+background #19171c
+selection_foreground #8b8792
+selection_background #26232a
 
-active_border_color #ffffff
+
+#: Cursor colors
+
+cursor #8b8792
+cursor_text_color #19171c
+
+
+#: URL underline color when hovering with mouse
+
+url_color #a06e3b
+
+
+#: kitty window border colors and terminal bell colors
+
+active_border_color #655f6d
+inactive_border_color #19171c
+bell_border_color #aa573c
+visual_bell_color none
+
+
+#: OS Window titlebar colors
+
+wayland_titlebar_color #26232a
+macos_titlebar_color #26232a
+
+
+#: Tab bar colors
+
+active_tab_foreground #e2dfe7
+active_tab_background #19171c
+inactive_tab_foreground #8b8792
+inactive_tab_background #26232a
+tab_bar_background #26232a
+tab_bar_margin_color none
+
+
+#: Colors for marks (marked text in the terminal)
+
+mark1_foreground #19171c
+mark1_background #e2dfe7
+mark2_foreground #19171c
+mark2_background #a06e3b
+mark3_foreground #19171c
+mark3_background #2a9292
+
+
+#: The basic 16 colors
+
+#: black
+color0 #19171c
+color8 #655f6d
+
+#: red
+color1 #be4678
+color9 #aa573c
+
+#: green
+color2 #2a9292
+color10 #26232a
+
+#: yellow
+color3 #a06e3b
+color11 #585260
+
+#: blue
+color4 #576ddb
+color12 #7e7887
+
+#: magenta
+color5 #955ae7
+color13 #e2dfe7
+
+#: cyan
+color6 #398bc6
+color14 #bf40bf
+
+#: white
+color7 #8b8792
+color15 #efecf4
